force-app/main/default/objects/Lead/fields/HelloWorld__c.field-meta.xml
<CustomField>
    <fullName>HelloWorld__c</fullName>
    <label>Hello World!</label>
    <length>255</length>
    <type>Text</type>
</CustomField>