force-app/main/default/objects/Lead/fields/Nom_du_partenaire__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_partenaire__c</fullName>
    <label>Nom du partenaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>