force-app/main/default/objects/Lead/fields/Proprietaire__c.field-meta.xml
<CustomField>
    <fullName>Proprietaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Propriétaire</label>
    <type>Checkbox</type>
</CustomField>