force-app/main/default/objects/Lead/listViews/Mes_pistes.listView-meta.xml
<ListView>
    <fullName>Mes_pistes</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>Mes pistes</label>
</ListView>